# Task1

./: CMakeLists.txt  main.cpp  print.cpp
Taks4/: CMakeLists.txt
Task1/: main.cpp
Task2/: CMakeLists.txt  Interface.h
Task3/: CMakeLists.txt  main.cpp
Task4/: CMakeLists.txt  main.qml
Task5/: CMakeLists.txt  main.qml
Task6/: main.qml
Task7/: backend.cpp  backend.h  main.qml
Task_4/: CMakeLists.txt  main.cpp  main.qml  text.cpp  text.h  text.qml
Task_5/: CMakeLists.txt  main.qml
Task_6/: CMakeLists.txt  main.qml
